# gear-lib

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Changelog  INSTALL.md  LICENSE.MIT  Makefile  README.cn.md  README.md  TODO  autogen_lib.sh  build.sh  liblightlib.h  test_liblightlib.c
gear-lib/: .gitignore  CMakeLists.txt  Kconfig  SConscript  component.mk
gear-lib/libavcap/: CMakeLists.txt  Makefile  Makefile.nmake  README.md  audiocap.h  dshow.c  dummy.c  esp32-camera.c  libavcap.c  libavcap.h  pulseaudio.c  test_libavcap.c  uvc.c  v4l2.c  videocap.h  xcbgrab.c
gear-lib/libbase64/: CMakeLists.txt  Kconfig  Makefile  Makefile.nmake  README.md  libbase64.c  libbase64.h  test_libbase64.c
gear-lib/libbitmap/: CMakeLists.txt  Makefile  README.md  bitops.h  hweight.c  kernel.h  libbitmap.c  libbitmap.h  test_libbitmap.c
gear-lib/libcollections/: Android.mk  Kconfig  Makefile  Makefile.nmake  README.md  libcollections.c  libcollections.h  test_libcollections.c
gear-lib/libconfig/: CMakeLists.txt  Makefile  Makefile.nmake  libconfig.h  test_libconfig.c
gear-lib/libdarray/: Android.mk  CMakeLists.txt  Makefile  Makefile.nmake  libdarray.c  libdarray.h  libdstring.c  libdstring.h  libserializer.c  libserializer.h  test_libdarray.c
gear-lib/libdebug/: Android.mk  CMakeLists.txt  Makefile  arm-buildroot-linux-uclibcgnueabihf-gcc.macro  arm-linux-gnueabihf-gcc.macro  libdebug.h
gear-lib/libdict/: Android.mk  CMakeLists.txt  Makefile  libdict.c  libdict.h  test_libdict.c
gear-lib/libfile/: CMakeLists.txt  Makefile  Makefile.nmake  filewatcher.c  fio.c  io.c  libfile.c  libfile.h  libfilewatcher.h  test_libfile.c
gear-lib/libfsm/: Android.mk  Makefile  Makefile.nmake  README.md  libfsm.c  libfsm.h  test_libfsm.c
gear-lib/libgevent/: CMakeLists.txt  Makefile  Makefile.nmake  README.md  epoll.c  iocp.c  libgevent.c  libgevent.h  poll.c  select.c  test_libgevent.c  wepoll.c
gear-lib/libhal/: Android.mk  CMakeLists.txt  Makefile  README.md  hal_esp32.c  hal_nix.c  hal_win.c  libhal.h  test_libhal.c
gear-lib/libhash/: CMakeLists.txt  Makefile  Makefile.nmake  README.md  libhash.c  libhash.h  test_libhash.c
gear-lib/libhomekit/: Makefile  README.md  accessory.c  accessory.h  camera_session.c  camera_session.h  config.h  crypto.c  debug.h  libhomekit.c  libhomekit.h  mdns.c  streaming.c  streaming.h  streaming_session.h  test_libhomekit.c  version.h  version.sh
gear-lib/libhttpd/: README.md  libhttpd.h  test_libhttpd.c
gear-lib/libipc/: Makefile  libipc.c  libipc.h  msgq_posix.c  msgq_sysv.c  netlink.c  netlink_driver.h  test_libipc.c  unix_socket.c
gear-lib/libjpeg-ex/: 720x480.yuv  libjpeg-ex.c  libjpeg-ex.h  test_libjpeg-ex.c
gear-lib/liblog/: CMakeLists.txt  Makefile  Makefile.nmake  color.h  liblog.c  liblog.h  test_liblog.c
gear-lib/libmacro/: Android.mk  Makefile  Makefile.nmake  README.md  libmacro.c  libmacro.h
gear-lib/libmedia-io/: CMakeLists.txt  Makefile  Makefile.nmake  audio-def.c  audio-def.h  libmedia-io.c  libmedia-io.h  memalign.h  test_libmedia-io.c  video-conv.c  video-conv.h  video-def.c  video-def.h
gear-lib/libmp4/: Android.mk  CMakeLists.txt  Makefile  Makefile.nmake  README.md  libmp4.c  libmp4.h  mp4muxer.c  test_libmp4.c  version.h
gear-lib/libmp4parser/: Makefile  README.md  libmp4parser.c  libmp4parser.h  mp4parser_inner.h  test_libmp4parser.c
gear-lib/libmqttc/: Makefile  README.md  libmqttc.c  libmqttc.h  test_libmqttc.c
gear-lib/libp2p/: Android.mk  Makefile  README.md  libp2p.c  libp2p.h  libptcp.c  libstun.c  libstun.h  queue.h  test_file_transfer.c  test_libp2p.c  test_libptcp.c
gear-lib/libplugin/: CMakeLists.txt  Makefile  libplugin.c  libplugin.h
gear-lib/libposix/: Android.mk  CMakeLists.txt  Makefile  Makefile.nmake  README.md  gear_misc.h  kernel_list_win32.h  libposix.c  libposix.h  libposix4linux.c  libposix4linux.h  libposix4rtos.c  libposix4rtos.h  libposix4rtthread.c  libposix4rtthread.h  libposix4win.c  libposix4win.h  libposix_ext.h  test_libposix.c  test_libposix4win.c
gear-lib/libposix4rtos/: Android.mk  Makefile  Makefile.nmake  README.md  libposix4rtos.c  libposix4rtos.h  test_libposix4rtos.c
gear-lib/libposix4win/: Makefile.nmake  kernel_list_win32.h  libposix4win.c  libposix4win.h  test_libposix4win.c
gear-lib/libptcp/: README.md  agent.h  glist.h  gqueue.h  libptcp.c  libptcp.h  pseudotcp.c  pseudotcp.h  test_libptcp.c
gear-lib/libqueue/: Android.mk  CMakeLists.txt  Makefile  Makefile.nmake  README.md  libqueue.c  libqueue.h  test_libqueue.c
gear-lib/librbtree/: CMakeLists.txt  Makefile  README  librbtree.c  librbtree.h
gear-lib/libringbuffer/: Makefile  libringbuffer.c  libringbuffer.h  test_libringbuffer.c
gear-lib/librpc/: Android.mk  CMakeLists.txt  Makefile  librpc.c  librpc.h  msgq_posix.c  msgq_sysv.c  netlink.c  netlink_driver.h  socket.c  test_librpc.c  unix_socket.c
gear-lib/librtmp/: Android.mk  Makefile  README.md  dh.h  handshake.h  hashswf.c  librtmp.c  librtmp.h  rtmp.c  rtmp_aac.c  rtmp_aac.h  rtmp_g711.c  rtmp_g711.h  rtmp_h264.c  rtmp_h264.h  rtmp_util.c  test_librtmp.c
gear-lib/librtmpc/: CMakeLists.txt  Makefile  Makefile.nmake  flv_mux.c  flv_mux.h  librtmpc.c  librtmpc.h  parseurl.c  rtmp.c  rtmp_aac.c  rtmp_aac.h  rtmp_g711.c  rtmp_g711.h  rtmp_h264.c  rtmp_h264.h  rtmp_sys.h  rtmp_util.c  rtmp_util.h
gear-lib/librtsp/: CMakeLists.txt  Makefile  README.md  librtsp.h  librtsp_server.c  librtsp_server.h  media_source.c  media_source.h  media_source_h264.c  media_source_live.c  request_handle.c  rtp.c  rtp.h  rtp_h264.c  rtsp_parser.c  rtsp_parser.h  sample.264  sdp.c  test_librtsp.c  transport_session.c  transport_session.h  uri_parse.c
gear-lib/libskt/: Makefile  README.md  libskt.c  libskt.h  test_libskt.c
gear-lib/libsock/: CMakeLists.txt  Makefile  Makefile.nmake  README.md  libsock.c  libsock.h  libsock_ext.c  (+2 more)
liblog/: Android.mk  Makefile  Makefile.android  Makefile.nmake  README  README.md  TODO  android.conf  color.conf  color.h  configure.ac  liblog.c  liblog.h  libutils.h  pi.conf  test_liblog  test_liblog.c  version.sh  win.h
(+788 files in other folders)
