CMAKE_MINIMUM_REQUIRED(VERSION 3.0...3.20)
PROJECT(gear-lib)

IF (DEFINED OS_WINDOWS)
set(CMAKE_C_FLAGS_DEBUG "/DUCRTINCLUDE=$(VCInstallDir)include ${CMAKE_C_FLAGS_DEBUG}")
set(CMAKE_C_FLAGS_DEBUG "/DMSVCINCLUDE=$(VCInstallDir)include ${CMAKE_C_FLAGS_DEBUG}")
set(CMAKE_C_FLAGS_DEBUG "/DWSDKINCLUDE=$(WindowsSdkDir)Include ${CMAKE_C_FLAGS_DEBUG}")
ENDIF ()

SET(POSIX_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libposix/)
IF (DEFINED OS_WINDOWS)
IF (DEFINED ENV_MINGW)
add_compile_definitions(ENV_MINGW=true)
ELSE ()
LIST(APPEND POSIX_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libposix/pthreads4w/)
LIST(APPEND POSIX_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libposix/MsvcLibX/include/)
ENDIF ()
ENDIF ()

SET(CONFIG_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libconfig/)
SET(PLUGIN_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libplugin/)
SET(RBTREE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/librbtree/)
SET(VECTOR_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libvector/)
SET(WORKQ_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libworkq/)
SET(HAL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libhal/)
SET(RPC_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/librpc/)
SET(MP4_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libmp4/)
SET(DICT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libdict/)
SET(DEBUG_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libdebug/)
SET(STREX_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libstrex/)
SET(DARRAY_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libdarray/)
IF (NOT DEFINED ENV_MINGW)
SET(HASH_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libhash/)
SET(THREAD_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libthread/)
SET(SOCK_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libsock/)
ENDIF ()
SET(GEVENT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libgevent/)
SET(MEDIA_IO_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libmedia-io/)
SET(QUEUE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libqueue/)
SET(LOG_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/liblog/)
SET(FILE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libfile/)
SET(AVCAP_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libavcap/)
SET(TIME_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libtime/)

ADD_SUBDIRECTORY(libposix)
ADD_SUBDIRECTORY(libstrex)
ADD_SUBDIRECTORY(libbitmap)
ADD_SUBDIRECTORY(libdict)
ADD_SUBDIRECTORY(libfile)
ADD_SUBDIRECTORY(libhash)
ADD_SUBDIRECTORY(libdarray)
ADD_SUBDIRECTORY(libthread)
ADD_SUBDIRECTORY(libsock)
ADD_SUBDIRECTORY(libgevent)
ADD_SUBDIRECTORY(libqueue)
ADD_SUBDIRECTORY(libdebug)
ADD_SUBDIRECTORY(libtime)
ADD_SUBDIRECTORY(liblog)
ADD_SUBDIRECTORY(libmedia-io)
ADD_SUBDIRECTORY(libavcap)
ADD_SUBDIRECTORY(librtmpc)
ADD_SUBDIRECTORY(librtsp)
ADD_SUBDIRECTORY(libconfig)
ADD_SUBDIRECTORY(libplugin)
ADD_SUBDIRECTORY(librbtree)
ADD_SUBDIRECTORY(libvector)
ADD_SUBDIRECTORY(libworkq)
ADD_SUBDIRECTORY(libhal)
ADD_SUBDIRECTORY(librpc)
ADD_SUBDIRECTORY(libmp4)

IF (NOT DEFINED ENV_MINGW)
ENDIF ()

IF (NOT DEFINED OS_WINDOWS)

ENDIF ()

#libcollections
#libfsm
#libhomekit
#libhttpd
#libipc
#libjpeg-ex
#libmqttc
#libp2p
#libptcp
#libringbuffer
#libsort
#libsubmask
#libutf2gbk
