CMAKE_MINIMUM_REQUIRED(VERSION 3.0...3.20)
PROJECT(gear-lib)

INCLUDE_DIRECTORIES(. ${POSIX_INCLUDE_DIR} ${DICT_INCLUDE_DIR} ${GEVENT_INCLUDE_DIR} ${DARRAY_INCLUDE_DIR} ${THREAD_INCLUDE_DIR})

LIST(APPEND SOURCE_FILES libfile.c fio.c io.c)

IF (DEFINED OS_LINUX)
LIST(APPEND SOURCE_FILES filewatcher.c)
ENDIF ()

ADD_LIBRARY(file ${SOURCE_FILES})

