CMAKE_MINIMUM_REQUIRED(VERSION 3.0...3.20)
PROJECT(gear-lib)

INCLUDE_DIRECTORIES(. ${POSIX_INCLUDE_DIR} ${DARRAY_INCLUDE_DIR})

LIST(APPEND SOURCE_FILES test_libhal.c)

IF (DEFINED OS_LINUX)
LIST(APPEND SOURCE_FILES hal_nix.c)
ELSEIF (DEFINED OS_WINDOWS)
LIST(APPEND SOURCE_FILES hal_win.c)
ENDIF ()

add_library(hal ${SOURCE_FILES})
