CMAKE_MINIMUM_REQUIRED(VERSION 3.0...3.20)
PROJECT(gear-lib)

INCLUDE_DIRECTORIES(.)

LIST(APPEND SOURCE_FILES libposix.c)

IF (DEFINED OS_LINUX)
LIST(APPEND SOURCE_FILES libposix4nix.c)
ELSEIF (DEFINED OS_WINDOWS)
AUX_SOURCE_DIRECTORY(MsvcLibX MSVCLIBX_SRC)
AUX_SOURCE_DIRECTORY(pthreads4w PTHREADS4W_SRC)
LIST(APPEND SOURCE_FILES ${MSVCLIBX_SRC} ${PTHREADS4W_SRC})
ENDIF ()

ADD_LIBRARY(posix ${SOURCE_FILES})
