CMAKE_MINIMUM_REQUIRED(VERSION 3.0...3.20)
PROJECT(gear-lib)

INCLUDE_DIRECTORIES(. ${POSIX_INCLUDE_DIR} ${HASH_INCLUDE_DIR} ${DARRAY_INCLUDE_DIR} ${WORKQ_INCLUDE_DIR} ${THREAD_INCLUDE_DIR} ${GEVENT_INCLUDE_DIR} ${TIME_INCLUDE_DIR} ${SOCK_INCLUDE_DIR} ${HAL_INCLUDE_DIR})
AUX_SOURCE_DIRECTORY(. SOURCE_FILES)

add_library(rpc ${SOURCE_FILES})
