CMAKE_MINIMUM_REQUIRED(VERSION 3.0...3.20)
PROJECT(gear-lib)

INCLUDE_DIRECTORIES(. ${POSIX_INCLUDE_DIR} ${MEDIA_IO_INCLUDE_DIR} ${THREAD_INCLUDE_DIR})

LIST(APPEND SOURCE_FILES libuvc.c)

IF (DEFINED OS_LINUX)
LIST(APPEND SOURCE_FILES v4l2.c)
ELSEIF (DEFINED OS_WINDOWS)
LIST(APPEND SOURCE_FILES dshow.c)
ENDIF ()

ADD_LIBRARY(uvc ${SOURCE_FILES})
